--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "serve": "cd src && python -m SimpleHTTPServer 5555",
+    "serve": "twistd -no web --path=./src --port=5555",
     "serve-js": "webpack-dev-server --host 0.0.0.0 --content-base src --progress --watch --history-api-fallback --inline --hot"
   },
   "repository": {
