--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "aframe-text-component": "0.1.0",
     "babel-polyfill": "^6.3.14",
     "classnames": "2.2.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "fetch-jsonp": "1.0.0",
     "immutable": "^3.7.6",
     "node-sass": "^3.4.2",
